<resources>
    <string name="app_name">FilmMonster</string>
    <string name="film1">Норвежское открытие Америки</string>
    <string name="film2">Прослушка</string>
    <string name="film3">Настоящий детектив</string>
    <string name="description1">На побережье Северной Америки в 1007 году нашей эры для религиозного завоевания новых земель сталкиваются Викинги, индейцы и ирландские монахи. Два викинга оставшиеся в живых после нападения оставив Западный берег Нового мира пробираются через первобытные леса вглубь неизвестной страны....</string>
    <string name="description2">Подразделение полицейских в Балтиморе пытается с помощью специальных средств и мероприятий по прослушиванию и скрытой видеосъемке довести до суда расследование преступлений организованных преступных групп, которые занимаются незаконным распространением наркотиков.</string>
    <string name="description3">В Луизиане в 1995 году происходит странное убийство девушки. В 2012 году дело об убийстве 1995 г. повторно открывают, так как произошло похожее убийство. Дабы лучше продвинуться в расследовании, полиция решает допросить бывших детективов, которые работали над делом в 1995 г.</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="like">Нравится</string>
    <string name="comment">Добавить комментарий</string>
    <string name="details">Детали</string>
    <string name="exit_question">Вы уверены, что хотите выйти?</string>
    <string name="exit">Выход</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="favorites">Избранное</string>
    <string name="films">Фильмы</string>
    <string name="likeSnackbar">Фильм добавлен в избранное</string>
    <string name="dislikeSnackbar">Фильм удален из избранного</string>
    <string name="cancel">Отмена</string>
    <string name="try_again">Попробовать снова</string>
    <string name="load_error">Не удалось загрузить фильмы с сервера</string>
</resources>