<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/det_poster"
                app:layout_collapseMode="parallax">
            </ImageView>
            <android.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                android:navigationIcon="@drawable/abc_ic_ab_back_material"
                android:title="@string/details"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/det_film_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Название фильма"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/det_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Описание фильма"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/det_film_name"/>

    <Button
        android:id="@+id/det_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friend"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/det_description"/>

    <CheckBox
        android:id="@+id/det_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/like_button"
        android:text="@string/like"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/det_invite"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/det_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/det_like"
        app:layout_constraintLeft_toLeftOf="parent"
        android:focusedByDefault="false"
        android:defaultFocusHighlightEnabled="false"
        android:importantForAutofill="no"
        android:inputType="none" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>